# fastapi-project-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  docker-entrypoint.sh  pyproject.toml  yoyo.ini
src/: data_access_layer.py  dependencies.py  errors.py  main.py  middlewares.py  schemas.py  settings.py
src/db/: db_manager.py
src/db/migrations/: 20250316_01_z93KU-person-table-created.py
src/persons/: data_access_layer.py  dependencies.py  errors.py  router.py  schemas.py  service.py
src/persons/utils/: clients.py
src/reports/: dependencies.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/test_cases/: base.py  test_persons.py  test_reports.py
tests/utils/: clients.py
