[project]
name = "fastapi-project-template"
version = "0.1.0"
description = "An intermediate level template for FastAPI application. Flexible and scalable, but not overloaded with abstractions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-extra-types>=2.10.2",
    "pydantic-settings>=2.8.1",
    "pytest-asyncio>=0.25.3",
    "semver>=3.0.4",
    "uvicorn>=0.34.0",
    "yoyo-migrations>=9.0.0",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.30.1",
    "mypy>=1.15.0",
    "ruff>=0.9.10",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
plugins = ['pydantic.mypy']
